newclay/test/Compiler/Propagation/Fail/BreakInStatementExpr1/main.clay
main() {
    while (true) {
        var x = (break; 1);
    }
}
